--- a/4/index.html
+++ b/4/index.html
@@ -156,10 +156,9 @@
           <h2 class="rewiews__tittle">Отзывы</h2>
           <p class="rewiews__comment">
             Я молодая мама, но все равно фотографии не набирали и близко такого
-            количества лайков, как <br />у популярных инстамамочек.<br />
-            В отчаянии, я накупила аксессуаров и игрушек в Мишке,<br />
-            и мои фотографии сразу стали более стильными, а также набирают
-            больше лайков!
+            количества лайков, как у популярных инстамамочек. В отчаянии, я
+            накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали
+            более стильными, а также набирают больше лайков!
           </p>
           <blockquote class="rewiews__item">
             <h3 class="rewiews__author">Анастасия Красильникова</h3>
@@ -335,7 +334,7 @@
 
     <!-- для отображения модального окна из элемента "modal" необходимо удалить класс "modal__close" -->
 
-    <div class="modal modal__close container">
+    <div class="modal modal__close">
       <div class="modal-container">
         <h2 class="modal__title">Добавить в корзину</h2>
         <form
