Добавляет декоративные элементы

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -254,13 +254,13 @@
           <div class="manufacturing__player-container">
             <img
               class="manufacturing__image"
-              src="./img/video-mobile.jpg"
+              src="../img/video-mobile.jpg"
               width="260"
               height="150"
               alt="Воспроизвести видео."
             />
             <button class="manufacturing__player-button">
-              <img src="./img/play.svg" alt="Воспроизвести видео." />
+              <img src="../img/play.svg" alt="Воспроизвести видео." />
             </button>
           </div>
           <div class="manufacturing__order">
