:heavy_check_mark: Сборка #5

--- a/5/catalog.html
+++ b/5/catalog.html
@@ -244,8 +244,7 @@
               height="150"
               alt="Воспроизвести видео."
             />
-            <button class="manufacturing__player-button">
-            </button>
+            <button class="manufacturing__player-button"></button>
           </div>
           <div class="manufacturing__order">
             <p class="manufacturing__descriprion">
