--- a/source/form.html
+++ b/source/form.html
@@ -6,18 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>form</title>
     <link rel="stylesheet" href="./css/style.css" />
+    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="img/favicons/favicon.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="img/favicons/apple-favicon.png">
+    <link rel="manifest" href="manifest.webmanifest">
   </head>
   <body>
     <header class="header">
       <nav class="header__nav">
         <a class="header__logo" href="index.html">
-          <img
-            class="header__logo-image"
-            src="./img/mishka-logo-mobile.svg"
-            width="86"
-            height="35"
-            alt="Логотип сайта."
-          />
+          <picture>
+            <source media="(min-width: 1150px)" srcset="img/logo-mishka-desktop.svg" width="149" height="72">
+            <source media="(min-width: 768px)" srcset="img/logo-mishka-tablet.svg" width="113" height="46">
+            <img src="img/logo-mishka-mobile.svg" width="86" height="35" alt="Логотип сайта 'Мишка'.">
+          </picture>
         </a>
         <button class="header__toggle-button" type="button">
           <span class="visually-hidden">Открыть меню.</span>
