--- a/source/catalog.html
+++ b/source/catalog.html
@@ -12,7 +12,7 @@
     <link rel="manifest" href="manifest.webmanifest">
   </head>
   <body>
-    <header class="header">
+    <header class="header header--inner-page">
       <div class="container">
         <nav class="header__nav header__nav--no-js">
           <div class="header__logo-wrapper">
@@ -126,9 +126,7 @@
                     fill="rgba($color-default-black, 0.2)"
                     viewBox="0 0 20 19"
                   >
-                    <path
-                      d="M19.227 7.238h-3.382L12.56.402C12.367 0 11.98-.1 11.594.101c-.386.2-.483.603-.29 1.005L14.3 7.238H5.508l2.995-6.132c.194-.402 0-.804-.29-1.005-.386-.202-.772 0-.966.301L3.961 7.238H.773A.777.777 0 0 0 0 8.042c0 .402.29.805.773.805h.193l.87 3.015c-.193.101-.29.302-.29.604 0 .402.29.703.676.703L3.865 19h12.27l1.643-5.83c.386 0 .676-.302.676-.704 0-.201-.096-.503-.29-.604l.87-3.015h.193A.777.777 0 0 0 20 8.042a.777.777 0 0 0-.773-.804ZM14.88 17.392H4.831l-1.16-4.323h12.464L14.88 17.39Zm1.546-5.831H3.188l-.773-2.815h14.783l-.773 2.815Z"
-                    />
+                  <use href="./img/sprite/sprite.svg#cart"/>
                   </svg>
                 </button>
               </div>
@@ -165,9 +163,7 @@
                     fill="rgba($color-default-black, 0.2)"
                     viewBox="0 0 20 19"
                   >
-                    <path
-                      d="M19.227 7.238h-3.382L12.56.402C12.367 0 11.98-.1 11.594.101c-.386.2-.483.603-.29 1.005L14.3 7.238H5.508l2.995-6.132c.194-.402 0-.804-.29-1.005-.386-.202-.772 0-.966.301L3.961 7.238H.773A.777.777 0 0 0 0 8.042c0 .402.29.805.773.805h.193l.87 3.015c-.193.101-.29.302-.29.604 0 .402.29.703.676.703L3.865 19h12.27l1.643-5.83c.386 0 .676-.302.676-.704 0-.201-.096-.503-.29-.604l.87-3.015h.193A.777.777 0 0 0 20 8.042a.777.777 0 0 0-.773-.804ZM14.88 17.392H4.831l-1.16-4.323h12.464L14.88 17.39Zm1.546-5.831H3.188l-.773-2.815h14.783l-.773 2.815Z"
-                    />
+                  <use href="./img/sprite/sprite.svg#cart"/>
                   </svg>
                 </button>
               </div>
@@ -206,9 +202,7 @@
                     fill="rgba($color-default-black, 0.2)"
                     viewBox="0 0 20 19"
                   >
-                    <path
-                      d="M19.227 7.238h-3.382L12.56.402C12.367 0 11.98-.1 11.594.101c-.386.2-.483.603-.29 1.005L14.3 7.238H5.508l2.995-6.132c.194-.402 0-.804-.29-1.005-.386-.202-.772 0-.966.301L3.961 7.238H.773A.777.777 0 0 0 0 8.042c0 .402.29.805.773.805h.193l.87 3.015c-.193.101-.29.302-.29.604 0 .402.29.703.676.703L3.865 19h12.27l1.643-5.83c.386 0 .676-.302.676-.704 0-.201-.096-.503-.29-.604l.87-3.015h.193A.777.777 0 0 0 20 8.042a.777.777 0 0 0-.773-.804ZM14.88 17.392H4.831l-1.16-4.323h12.464L14.88 17.39Zm1.546-5.831H3.188l-.773-2.815h14.783l-.773 2.815Z"
-                    />
+                  <use href="./img/sprite/sprite.svg#cart"/>
                   </svg>
                 </button>
               </div>
