--- a/source/form.html
+++ b/source/form.html
@@ -118,291 +118,116 @@
           <h2 class="intro__tittle">Вязание на заказ</h2>
         </div>
       </section>
-      <section class="knitting">
-        <p class="knitting__description">
-          Мы будем рады воплотить в жизнь ваши пожелания! Заполните простую
-          форму заказа и мы свяжемся с вами, чтобы уточнить детали.
-        </p>
-        <form
-          class="knitting__form form"
-          action="https://echo.htmlacademy.ru/"
-          method="GET"
-        >
-          <div class="form__container">
-            <fieldset class="form-group form-group--type">
-              <legend class="form-group__title form-group__title--type">
-                Тип
-              </legend>
-              <ul class="form__list">
-                <li class="form__item">
-                  <label class="form-group__label form-group__label--radio">
-                    <input
-                      class="form-group__input form-group__input--radio visually-hidden"
-                      type="radio"
-                      name="type"
-                      value="Аксессуар для интерьера"
-                      checked
-                    />
-                    <span
-                      class="form-group__mark form-group__mark--radio"
-                    ></span>
-                    Аксессуар для интерьера
-                  </label>
-                </li>
-                <li class="form__item">
-                  <label class="form-group__label form-group__label--radio">
-                    <input
-                      class="form-group__input form-group__input--radio visually-hidden"
-                      type="radio"
-                      name="type"
-                      value="Детская игрушка"
-                    />
-                    <span
-                      class="form-group__mark form-group__mark--radio"
-                    ></span>
-                    Детская игрушка
-                  </label>
-                </li>
-              </ul>
-            </fieldset>
+      <section class="form">
+        <h2 class="visually-hidden">Форма оформления заказа.</h2>
+        <p class="form__description">Мы будем рады воплотить в жизнь ваши пожелания! Заполните простую форму заказа и мы свяжемся с вами, чтобы уточнить детали.</p>
+        <form class="form__wrapper" action="https://echo.htmlacademy.ru/" method="post">
+          <div class="form__group form__group--radio">
+            <h3 class="form__legend">
+              <span class="form__legend-text">Тип</span>
+            </h3>
+            <label class="form__label">
+              <input class="form__input-radio visually-hidden" type="radio" name="type" value="accessory-interior" checked>
+              <span class="form__dot"></span>
+              <span class="form__text">Аксессуар для интерьера</span>
+            </label>
+            <label class="form__label">
+              <input class="form__input-radio visually-hidden" type="radio" name="type" value="kid-toy">
+              <span class="form__dot"></span>
+              <span class="form__text">Детская игрушка</span>
+            </label>
           </div>
-
-          <div class="form__container--color">
-            <div class="form__container">
-              <fieldset class="form-group form__group-wrapper form-group--grey">
-                <legend class="form-group__title form-group__title--color">
-                  Цвет
-                </legend>
-                <ul class="form__list form__list--has-wrapper">
-                  <li class="form__item form__item--checkbox">
-                    <label
-                      class="form-group__label form-group__label--checkbox"
-                    >
-                      <input
-                        class="form-group__input form-group__input--checkbox visually-hidden"
-                        type="checkbox"
-                        name="color"
-                        value="white"
-                        checked
-                      />
-                      <span
-                        class="form-group__mark form-group__mark--checkbox"
-                      ></span>
-                      Белый
-                    </label>
-                  </li>
-                  <li class="form__item form__item--checkbox">
-                    <label
-                      class="form-group__label form-group__label--checkbox"
-                    >
-                      <input
-                        class="form-group__input form-group__input--checkbox visually-hidden"
-                        type="checkbox"
-                        name="color"
-                        value="grey"
-                        checked
-                      />
-
-                      <span
-                        class="form-group__mark form-group__mark--checkbox"
-                      ></span>
-                      Серый
-                    </label>
-                  </li>
-                  <li class="form__item form__item--checkbox">
-                    <label
-                      class="form-group__label form-group__label--checkbox"
-                    >
-                      <input
-                        class="form-group__input form-group__input--checkbox visually-hidden"
-                        type="checkbox"
-                        name="color"
-                        value="tiffany"
-                      />
-                      <span
-                        class="form-group__mark form-group__mark--checkbox"
-                      ></span>
-                      Тиффани
-                    </label>
-                  </li>
-                  <li class="form__item form__item--checkbox">
-                    <label
-                      class="form-group__label form-group__label--checkbox"
-                    >
-                      <input
-                        class="form-group__input form-group__input--checkbox visually-hidden"
-                        type="checkbox"
-                        name="color"
-                        value="black"
-                      />
-                      <span
-                        class="form-group__mark form-group__mark--checkbox"
-                      ></span>
-                      Черный
-                    </label>
-                  </li>
-                  <li class="form__item form__item--checkbox">
-                    <label
-                      class="form-group__label form-group__label--checkbox"
-                    >
-                      <input
-                        class="form-group__input form-group__input--checkbox visually-hidden"
-                        type="checkbox"
-                        name="color"
-                        value="pink"
-                      />
-                      <span
-                        class="form-group__mark form-group__mark--checkbox"
-                      ></span>
-                      Розовый
-                    </label>
-                  </li>
-                  <li class="form__item form__item--checkbox">
-                    <label
-                      class="form-group__label form-group__label--checkbox"
-                    >
-                      <input
-                        class="form-group__input form-group__input--checkbox visually-hidden"
-                        type="checkbox"
-                        name="color"
-                        value="orange"
-                      />
-                      <span
-                        class="form-group__mark form-group__mark--checkbox"
-                      ></span>
-                      Оранжевый
-                    </label>
-                  </li>
-                </ul>
-              </fieldset>
+          <div class="form__inner">
+            <div class="form__group form__group--checkbox">
+              <h3 class="form__legend">
+                <span class="form__legend-text">Цвет</span>
+              </h3>
+              <div class="form__grid-label">
+                <label class="form__label">
+                  <input class="form__input-checkbox visually-hidden" type="checkbox" name="color" value="white" checked>
+                  <span class="form__check"></span>
+                  <span class="form__text">Белый</span>
+                </label>
+                <label class="form__label">
+                  <input class="form__input-checkbox visually-hidden" type="checkbox" name="color" value="gray" checked>
+                  <span class="form__check"></span>
+                  <span class="form__text">Серый</span>
+                </label>
+                <label class="form__label">
+                  <input class="form__input-checkbox visually-hidden" type="checkbox" name="color" value="tiffani">
+                  <span class="form__check"></span>
+                  <span class="form__text">Тиффани</span>
+                </label>
+                <label class="form__label">
+                  <input class="form__input-checkbox visually-hidden" type="checkbox" name="color" value="black">
+                  <span class="form__check"></span>
+                  <span class="form__text">Черный</span>
+                </label>
+                <label class="form__label">
+                  <input class="form__input-checkbox visually-hidden" type="checkbox" name="color" value="pink">
+                  <span class="form__check"></span>
+                  <span class="form__text">Розовый</span>
+                </label>
+                <label class="form__label">
+                  <input class="form__input-checkbox visually-hidden" type="checkbox" name="color" value="orange">
+                  <span class="form__check"></span>
+                  <span class="form__text">Оранжевый</span>
+                </label>
+              </div>
             </div>
           </div>
-
-          <div class="form__container">
-            <fieldset class="form-group form-group--about">
-              <legend class="form-group__title form-group__title--about">
-                ФИО
-              </legend>
-
-              <ul class="form__list form__list--about">
-                <li class="form__item form__item--about">
-                  <label class="form-group__label" for="name">Имя:</label>
-
-                  <input
-                    class="form-group__input form-group__input--about"
-                    type="text"
-                    name="user-name"
-                    placeholder="Введите ваше имя*"
-                    id="name"
-                    required
-                  />
-                </li>
-
-                <li class="form__item form__item--about">
-                  <label class="form-group__label" for="surname">
-                    Фамилия:
-                  </label>
-
-                  <input
-                    class="form-group__input form-group__input--about"
-                    type="text"
-                    name="user-surname"
-                    placeholder="Укажите фамилию*"
-                    id="surname"
-                    required
-                  />
-                </li>
-
-                <li class="form__item form__item--about">
-                  <label class="form-group__label" for="patronymic">
-                    Отчество:
-                  </label>
-
-                  <input
-                    class="form-group__input form-group__input--about"
-                    type="text"
-                    name="user-patronymic"
-                    placeholder="Отчество, если желаете"
-                    id="patronymic"
-                  />
-                </li>
-              </ul>
-            </fieldset>
+          <div class="form__group form__group--user">
+            <h3 class="form__legend">
+              <span class="form__legend-text">ФИО</span>
+            </h3>
+            <label class="form__label">
+              <span class="form__text">Имя:</span>
+              <input class="form__input-text" type="text" name="name" placeholder="Введите ваше имя*" required>
+            </label>
+            <label class="form__label">
+              <span class="form__text">Фамилия:</span>
+              <input class="form__input-text" type="text" name="surname" placeholder="Укажите фамилию*" required>
+            </label>
+            <label class="form__label">
+              <span class="form__text">Отчество:</span>
+              <input class="form__input-text" type="text" name="patronymic" placeholder="Отчество, если желаете">
+            </label>
           </div>
-          <div class="form__container--color">
-            <div class="form__container">
-              <fieldset class="form-group form-group--contacts">
-                <div class="form-group__container">
-                  <legend class="form-group__title">Тел</legend>
-                  <label class="form-group__label form-group__label--phone">
-                    <input
-                      class="form-group__input form-group__input--contacts"
-                      type="tel"
-                      name="user-number"
-                      placeholder="+7 ХХХ ХХХ ХХ ХХ*"
-                      required
-                    />
-                    <svg
-                      class="form-group__contact"
-                      xmlns="http://www.w3.org/2000/svg"
-                      width="25"
-                      height="24"
-                      fill="none"
-                      viewBox="0 0 25 24"
-                    >
-                      <use href="./img/sprite/sprite.svg#phone-icon" />
-                    </svg>
-                  </label>
-                </div>
-                <div class="form-group__container">
-                  <legend class="form-group__title">E-mail</legend>
-                  <label class="form-group__label form-group__label--email">
-                    <input
-                      class="form-group__input form-group__input--contacts"
-                      type="email"
-                      name="user-mail"
-                      placeholder="Ваш Email*"
-                      required
-                    />
-                    <svg
-                      class="form-group__contact"
-                      xmlns="http://www.w3.org/2000/svg"
-                      width="32"
-                      height="21"
-                      fill="none"
-                      viewBox="0 0 32 21"
-                    >
-                      <use href="./img/sprite/sprite.svg#email-icon" />
-                    </svg>
-                  </label>
-                </div>
-              </fieldset>
-            </div>
-          </div>
-
-          <div class="form__container form__container--last">
-            <fieldset class="form-group form-group--more">
-              <legend class="form-group__title form-group__title--additionally">
-                Доп
-              </legend>
-              <label class="form-group__label-more" for="more">
-                <textarea
-                  class="form-group__textarea"
-                  name="more"
-                  cols="30"
-                  rows="5"
-                  placeholder="Опишите все ваши пожелания к заказу"
-                  id="more"
-                ></textarea>
+          <div class="form__inner">
+            <div class="form__group form__group--phone">
+              <h3 class="form__legend">
+                <span class="form__legend-text">Тел</span>
+              </h3>
+              <label class="form__label">
+                <span class="visually-hidden">Укажите номер телефона.</span>
+                <input class="form__input-text" type="tel" name="phone" placeholder="+7 ХХХ ХХХ ХХ ХХ*" required>
+                <svg class="form__svg" width="25" height="24" role="img">
+                  <use xlink:href="img/svg/sprite.svg#icon-phone" />
+                </svg>
               </label>
-            </fieldset>
+            </div>
+            <div class="form__group form__group--email">
+              <h3 class="form__legend">
+                <span class="form__legend-text">E-mail</span>
+              </h3>
+              <label class="form__label">
+                <span class="visually-hidden">Укажите электронную почту.</span>
+                <input class="form__input-text" type="email" name="email" placeholder="Ваш Email*" required>
+                <svg class="form__svg" width="32" height="21" role="img">
+                  <use xlink:href="img/svg/sprite.svg#icon-email" />
+                </svg>
+              </label>
+            </div>
           </div>
-
-          <div class="form__submit">
-            <span class="form__mark">*Поля обязательны для заполнения</span>
-            <button class="form__submit-button button" type="submit">
-              Отправить заказ
-            </button>
+          <div class="form__group form__group--text">
+            <h3 class="form__legend">
+              <span class="form__legend-text">ДОП</span>
+            </h3>
+            <textarea class="form__textarea" name="wishes" rows="6" placeholder="Опишите все ваши пожелания к заказу" aria-label="Опишите все ваши пожелания к заказу."></textarea>
+          </div>
+          <div class="form__submit-wrapper">
+            <p class="form__required">*Поля обязательны для заполнения</p>
+            <button class="form__button button button--primary" type="submit">Отправить заказ</button>
           </div>
         </form>
       </section>
